--- a/emacs.org
+++ b/emacs.org
@@ -6,7 +6,7 @@
 *** Garbage Collection
 A more advanced garbage collection "hack". https://github.com/emacsmirror/gcmh
 For me this does not speed up anything.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp  :tangle no
   (add-to-list 'load-path "~/.dotfiles/.emacs.d/elpa/gcmh-20201116.2251")
   (gcmh-mode 1)
 #+end_src
@@ -62,6 +62,7 @@ This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-con
   (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'efs/org-babel-tangle-config)))
 #+end_src
 
+
 ** Automatic Package Updates
 The auto-package-update package helps us keep Emacs packages up to date.  It will prompt you after a certain number of days either at startup or at a specific time of day to remind you to update your packages.
 
@@ -116,11 +117,6 @@ You can also use =M-x auto-package-update-now= to update right now!
     )
 #+end_src
 
-
-#+begin_src emacs-lisp
-  (use-package good-scroll
-  :config (good-scroll-mode 1))
-#+end_src
 
 *** Better undo
     - =C-x u= visualizes undo history as a tree for easy navigation
@@ -551,7 +547,7 @@ Want simple formatting checker (flycheck). There is currently an issue with flak
 * Org-Mode
 ** Mode setup
 #+begin_src emacs-lisp 
-  (defun efs/org-mode-setup ()
+  (defun jmn/org-mode-setup ()
     (org-indent-mode)
     (variable-pitch-mode 1)
     (visual-line-mode 1)
@@ -569,43 +565,58 @@ Want simple formatting checker (flycheck). There is currently an issue with flak
 
 ** Fonts 
 #+begin_src emacs-lisp
-  (defun efs/org-font-setup ()
-    ;; Replace list hyphen with dot
-    (font-lock-add-keywords 'org-mode
-                       '(("^ *\\([-]\\) "
-                        (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
-    ;; Elipsis
-     (setq org-ellipsis " ▾")
-    ;; Set faces for heading levels
-    (dolist (face '((org-level-1 . 1.2)
-                    (org-level-2 . 1.1)
-                    (org-level-3 . 1.05)
-                    (org-level-4 . 1.0)
-                    (org-level-5 . 1.1)
-                    (org-level-6 . 1.1)
-                    (org-level-7 . 1.1)
-                    (org-level-8 . 1.1)))
-      (set-face-attribute (car face) nil :font "Cantarell" :weight 'regular :height (cdr face)))
+         (defun jmn/org-font-setup ()
 
-    ;; Ensure that anything that should be fixed-pitch in Org files appears that way
-    (set-face-attribute 'org-block nil :foreground nil :inherit 'fixed-pitch)
-    (set-face-attribute 'org-code nil   :inherit '(shadow fixed-pitch))
-    (set-face-attribute 'org-table nil   :inherit '(shadow fixed-pitch))
-    (set-face-attribute 'org-verbatim nil :inherit '(shadow fixed-pitch))
-    (set-face-attribute 'org-special-keyword nil :inherit '(font-lock-comment-face fixed-pitch))
-    (set-face-attribute 'org-meta-line nil :inherit '(font-lock-comment-face fixed-pitch))
-    (set-face-attribute 'org-checkbox nil :inherit 'fixed-pitch))
+           ;; Replace list hyphen with dot
+           (font-lock-add-keywords 'org-mode
+                              '(("^ *\\([-]\\) "
+                               (0 (prog1 () (compose-region (match-beginning 1)
+                                                            (match-end 1) "•"))))))
+
+           ;; Set faces for heading levels
+           (dolist (face '((org-level-1 . 1.2)
+                           (org-level-2 . 1.1)
+                           (org-level-3 . 1.05)
+                           (org-level-4 . 1.0)
+                           (org-level-5 . 1.1)
+                           (org-level-6 . 1.1)
+                           (org-level-7 . 1.1)
+                           (org-level-8 . 1.1)))
+             (set-face-attribute (car face) nil :font "Cantarell"
+                                 :weight 'regular :height (cdr face)))
+
+           ;; Ensure that anything that should be fixed-pitch in Org files appears that way
+           (set-face-attribute 'org-block nil :foreground nil :inherit 'fixed-pitch)
+           (set-face-attribute 'org-code nil   :inherit '(shadow fixed-pitch))
+           (set-face-attribute 'org-table nil   :inherit '(shadow fixed-pitch))
+           (set-face-attribute 'org-verbatim nil :inherit '(shadow fixed-pitch))
+           (set-face-attribute 'org-special-keyword nil
+                               :inherit '(font-lock-comment-face fixed-pitch))
+           (set-face-attribute 'org-meta-line nil
+                               :inherit '(font-lock-comment-face fixed-pitch))
+           (set-face-attribute 'org-checkbox nil :inherit 'fixed-pitch))
 #+end_src
 
 ** Start
 #+begin_src emacs-lisp
   (use-package org
     :commands (org-capture org-agenda)
-    :hook (org-mode . efs/org-mode-setup)
+    :hook (org-mode . jmn/org-mode-setup)
     :config
-    (efs/org-font-setup)
-    (setq org-image-actual-width nil) ; fix to allow picture resizing
-  )  
+    (jmn/org-font-setup)
+    (setq org-ellipsis " ▾"
+          org-hide-emphasis-markers t
+          org-src-fontify-natively t
+          org-fontify-quote-and-verse-blocks t
+          org-src-tab-acts-natively t
+          org-edit-src-content-indentation 2
+          org-hide-block-startup nil
+          org-src-preserve-indentation nil
+          org-startup-folded 'content
+          org-cycle-separator-lines 2
+          org-capture-bookmark nil
+          org-image-actual-width nil) ; fix to allow picture resizing
+    )
 #+end_src
 
 ** Bullets
