--- a/emacs.org
+++ b/emacs.org
@@ -1,6 +1,7 @@
 #+TITLE: Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle .emacs.d/init.el
 #+STARTUP: overview
+
 * Setup
 ** Silence Native Compilation Warnings
 #+begin_src emacs-lisp
@@ -16,8 +17,9 @@ For me this does not speed up anything.
   (gcmh-mode 1)
 #+end_src
 
-*** Startup Timer
-#+begin_src emacs-lisp
+*** UNUSED Startup Timer
+Currently the dashboard does this automatically for me.
+#+begin_src emacs-lisp  :tangle no
   (defun efs/display-startup-time ()
     (message "Emacs loaded in %s with %d garbage collections."
              (format "%.2f seconds"
@@ -112,7 +114,8 @@ You can also use =M-x auto-package-update-now= to update right now!
     (redisplay-dont-pause            t)
     ;; Number of lines of continuity to retain when scrolling by full screens
     (next-screen-context-lines       2)
-    (scroll-conservatively       10000) ;; only 'jump' when moving this far off the screen
+    ;; only 'jump' when moving this far off the screen
+    (scroll-conservatively       10000)
     (scroll-step                     1) ;; Keyboard scroll one line at a time
     (mouse-wheel-progressive-speed nil) ;; Don't accelerate scrolling
     (mouse-wheel-follow-mouse        t) ;; Scroll window under mouse
@@ -120,7 +123,6 @@ You can also use =M-x auto-package-update-now= to update right now!
     (auto-window-vscroll           nil) ;; Cursor move faster
     )
 #+end_src
-
 
 *** Better undo
     - =C-x u= visualizes undo history as a tree for easy navigation
@@ -154,7 +156,6 @@ As of now I eliminate the creation of backup files with the following steps. A b
 #+end_src
 
 *** Theme
-Favorites: gruvbox, gruvbox-hard, doom-tomorrow-night, doom-dracula
 #+begin_src emacs-lisp
   (use-package gruvbox-theme
       :init (load-theme 'gruvbox-dark-hard t))
@@ -197,8 +198,8 @@ Enables you to customize the mode names displayed in the mode line.
   :hook ((text-mode . ws-butler-mode)
          (prog-mode . ws-butler-mode)))
 #+end_src
-** Preferences
-Make  =yes or no= prompts shorter
+
+*** Make  =yes or no= prompts shorter
 #+begin_src emacs-lisp
 (defalias 'yes-or-no-p 'y-or-n-p)
 #+end_src
@@ -210,15 +211,40 @@ Present a list of currently open buffers when you split the window.
   :after 'window-split (switch-to-buffer))
 #+end_src
 
+*** Dashboard
+https://github.com/emacs-dashboard/emacs-dashboard
+#+begin_src emacs-lisp
+  (recentf-mode 1) ;; needed for recent files in dashboard
+
+  (use-package dashboard
+    :ensure t
+    :config
+    (dashboard-setup-startup-hook)
+    (setq dashboard-center-content 1)
+    (setq dashboard-show-shortcuts nil)
+    (setq dashboard-items '((recents  . 5)
+                            ;; (bookmarks . 5)
+                            (projects . 5)
+                            (agenda . 5)
+                            ;; (registers . 5)
+                            ))
+    (setq dashboard-set-heading-icons t)
+    (setq dashboard-set-file-icons t)
+    (setq dashboard-projects-backend 'projectile)
+
+    (dashboard-modify-heading-icons '((recents . "file-text")))
+
+
+    (setq dashboard-set-footer nil)
+    )
+#+end_src
+
 ** Goto last change
 Sometimes it's useful to step to the last change in a buffer.
 #+begin_src emacs-lisp
 (use-package goto-last-change
   :bind (("C-;" . goto-last-change)))
 #+end_src
-
-#+RESULTS:
-: goto-last-change
 
 ** Input Buffer, Directory Search, and Help
 *** Ivy, Ivy-Rich, and Counsel
@@ -440,6 +466,7 @@ Currently company-mode gets called with lsp-mode by default. //my understanding/
   :config
   (company-prescient-mode +1))
 #+end_src
+
 ** Yasnippet
 #+begin_src emacs-lisp
   (use-package yasnippet
@@ -695,14 +722,12 @@ Faster terminal due to being compiled. Default is a better mode than term-mode; 
     (setq vterm-max-scrollback 10000))
 #+end_src
 
-#+RESULTS:
-: 10000
-   
 ** shell-mode
 Between term-mode eshell.
 
 ** eshell
 More customization in Elisp. Supports Tramp. 
+
 * File Management
 ** TODO Dired
 More to do at [[https://youtu.be/PMWwM8QJAtU][here]].  Could not use "use-package" since dired packaged did not exist. Here we just modify dired without "use-package".
