Add Fast-scroll and a few parens settings.

--- a/emacs.org
+++ b/emacs.org
@@ -124,6 +124,24 @@ You can also use =M-x auto-package-update-now= to update right now!
     )
 #+end_src
 
+#+RESULTS:
+
+**** Fast Scroll
+To ensure scrolling is fast in Emacs, I use a package that disables non-essential things while the window is being scrolled:
+#+begin_src emacs-lisp
+(use-package fast-scroll
+  :ensure t
+  :demand t
+  :config
+  (add-hook 'fast-scroll-start-hook (lambda () (flycheck-mode -1)))
+  (add-hook 'fast-scroll-end-hook (lambda () (flycheck-mode 1)))
+  (fast-scroll-config)
+  (fast-scroll-mode 1))
+#+end_src
+
+#+RESULTS:
+: t
+
 *** Better undo
     - =C-x u= visualizes undo history as a tree for easy navigation
     - =C-_= undo
@@ -157,8 +175,12 @@ As of now I eliminate the creation of backup files with the following steps. A b
 
 *** Theme
 #+begin_src emacs-lisp
-  (use-package gruvbox-theme
-      :init (load-theme 'gruvbox-dark-hard t))
+  (use-package monokai-theme
+      :init (load-theme 'monokai t))
+  ;; Saving my SECOND favorite theme which is easier on the eyes.
+  ;; (use-package gruvbox-theme
+  ;;     :init (load-theme 'gruvbox-dark-hard t))
+
 #+end_src
 
 *** Modeline 
@@ -355,20 +377,28 @@ Gives warning on startup for login.    [[ https://github.com/emacs-grammarly/lsp
 #+end_src
 
 #+RESULTS:
-* Development 
-** Rainbow Delimiters
+* Development
+** Parens/delimiters
+
+#+begin_src emacs-lisp
+(show-paren-mode    1) ; Highlight parentheses pairs.
+(electric-pair-mode 1) ; Close pairs automatically.
+#+end_src
+
+*** Rainbow Delimiters
 #+begin_src emacs-lisp
   (use-package rainbow-delimiters
     :hook (prog-mode . rainbow-delimiters-mode))
 #+end_src
 
-** Smartparens
+*** Smartparens
 Auto-creates closing parenthesis and bar and, smartly, writes it over if it is typed.
 #+begin_src emacs-lisp
   (use-package smartparens
     :delight smartparens-mode
     :hook (prog-mode . rainbow-delimiters-mode))
 #+end_src
+
 
 ** Magit
 [[https://magit.vc/][Magit Documentation]]
@@ -501,23 +531,22 @@ Like lsp-mode but for debuggers.
 * C++
 ** Smart compile
 #+begin_src emacs-lisp
-    (use-package smart-compile
-      :commands smart-compile)
+  (use-package smart-compile
+    :commands smart-compile)
 #+end_src
 
 ** Hook
   Currently lsp-mode works with clangd backend without any initial setup.
   company-clang needs =clang= installed on the system.
   #+begin_src emacs-lisp   
-    (setq-default c-basic-offset 4)
+    (setq-default c-basic-offset 2)
 
     (defun my-c-c++-mode-hook-fn ()
       (lsp)                ; turn on
-      (smart-compile)
-      (smartparens-mode)   ; turn on
-      (local-set-key (kbd "<tab>") #'company-indent-or-complete-common) ;tab comp
-      (yas-minor-mode-on)  ; turn on
-      (abbrev-mode -1)        ; turn off
+      (smartparens-mode 1)   ; turn on
+      (local-set-key (kbd "C-<tab>") #'lsp-format-buffer) ;tab comp
+      (yas-minor-mode 1)  ; turn on
+      ;; (abbrev-mode -1)        ; turn off
       )
     (add-hook 'c-mode-hook #'my-c-c++-mode-hook-fn)
     (add-hook 'c++-mode-hook #'my-c-c++-mode-hook-fn)
